[package]
name = "map-project"
version = "0.1.0"
authors = ["Chris Oates <chrispoates@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.9.0"
osmpbfreader = "0.13.0"
petgraph = "0.4.13"
rand = "0.3.14"
ordered-float = "1.0.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
